--- a/native/KotlinIOS/KotlinIOS/Base.lproj/Main.storyboard
+++ b/native/KotlinIOS/KotlinIOS/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6rn-u3-azR">
-                                <rect key="frame" x="183" y="659" width="49" height="30"/>
+                                <rect key="frame" x="183" y="464" width="49" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Submit">
                                     <color key="titleShadowColor" systemColor="systemGray2Color"/>
@@ -28,13 +28,28 @@
                                 </connections>
                             </button>
                             <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CXt-0n-OkY">
-                                <rect key="frame" x="20" y="91" width="374" height="224"/>
+                                <rect key="frame" x="20" y="0.0" width="374" height="224"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             </pickerView>
                             <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Efy-V3-JrB">
-                                <rect key="frame" x="28" y="311" width="358" height="224"/>
+                                <rect key="frame" x="28" y="232" width="358" height="224"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             </pickerView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="FVC-28-7df">
+                                <rect key="frame" x="11" y="502" width="393" height="284"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="myCell" id="iSQ-PF-4fU">
+                                        <rect key="frame" x="0.0" y="24.5" width="393" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="iSQ-PF-4fU" id="VHl-kt-h0U">
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -42,6 +57,7 @@
                     <connections>
                         <outlet property="arrivalPicker" destination="Efy-V3-JrB" id="Ncv-DE-Gey"/>
                         <outlet property="departurePicker" destination="CXt-0n-OkY" id="OKg-vw-oph"/>
+                        <outlet property="simpleTable" destination="FVC-28-7df" id="arC-eH-oPy"/>
                         <outlet property="submitButton" destination="6rn-u3-azR" id="AER-lQ-unJ"/>
                     </connections>
                 </viewController>
@@ -51,6 +67,9 @@
         </scene>
     </scenes>
     <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemGray2Color">
             <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
